2004-07-24  Aaron Stone  <aaron@serendipity.cx>

	* main.c, users.c, vut2dbmail.c, maintenance.c: improved handling
	of several common command line options and added more comments.

2004-07-22  Aaron Stone  <aaron@serendipity.cx>

	* db.c: added acl, pbsp and subscription to the list of tables
	and added the dbmail_ prefix to them in all queries.
	* db.c: also added auto_replies and auto_notifications to the 
	list of tables and added the dbmail_ prefix to them in all queries.
	* contrib/startup-scripts/gentoo/dbmail-lmtpd,imapd,pop3d:
	pidfiles now go into /var/run rather than /var/run/dbmail
	as most people won't have that directory already existing.
	* pidfile.c (pidfile_create): added an fflush call so that filesystems
	like XFS which cache agressively will be forced to write out the pid.
	* pidfile.c (pidfile_remove): added atexit call so that the
	pidfile is cleaned up upon program termination.

2004-07-21  Aaron Stone  <aaron@serendipity.cx>

	* user.c: overhaul of argument handling ended up being a near
	rewrite of the entire utility. possibly added GCC style macro
	dependencies; they should be supplemented with portable code.
	* main.c, maintenance.c, vut2dbmail.c: improved command line
	argument handling.
	* timsieved.c, imapd.c, lmtpd.c, pop3d.c: added pidfile support
	and common command line argument handling.
	* dbmail.h: added pidfile defaults.
	* pidfile.c, pidfile.h: these are borrowed from Samba; heavily
	edited though for better compatibility with DBMail, though.
	* dbmd5.c, dbmd5.h (makemd5): added const keywords.
	* debug.h: removed a previously commented out line.
	* lmtp.c: applied patch that fixes Exim by resetting variables
	after a message has been successfully delivered.
	* db.c, dbmsgbuf.c, dbsearch.c: added dbmail_ table prefixes.
	* auth/authsql.c: added dbmail_ table prefixes.
	* auth.h (auth_adduser): now passing userid and clientid
	numerically as a u64_t rather than as a char string.
	* contrib/startup-scripts/dbmail-imap: deleted.